src/test/deca/codegen/invalid/overflow_mul_float.ass
	TSTO #0
	BOV stack_overflow
	ADDSP #0
; start main program
; Main program
; Beginning of main instructions:
	LOAD #0x1.8a6e32p111, R2
	MUL #0x1.74876ep36, R2
	BOV overflow
	LOAD R2, R1
	WFLOAT
	WNL
	LOAD R2, R1
	WSTR "Test échoué : voir p96 paragraphe 5 phrase 3 et 5"
	WNL
	HALT
stack_overflow:
	WSTR "Error: Stack overflow"
	ERROR
div_by_zero:
	WSTR "Error: Division by zero"
	ERROR
overflow:
	WSTR "Error: Overflow during arithmetic operation"
	ERROR
invalid_input:
	WSTR "Error: Invalid input"
	ERROR
	HALT
; end main program
